[#22312] fix List.of usage